# MyVibe

./: .gitignore  .test.py  README.md  pyproject.toml  requirments.txt
.claude/: settings.local.json
.myvibe/: TODO.md
DOCS/: BUGLIST  OPTIMIZATIONS.md  Plan.MD  TODO_LIST.MD  main.py  test_cache.py  toolcache.py  上下文管理.MD
DOCS/plans/: plan_01_model_routing.md  plan_02_subagent.md  plan_03_skill_interface.md  plan_04_background_tasks.md  plan_05_mcp_and_completer.md  plan_06_compile_multilang.md
config/: config.example.yaml
src/: main.py
src/agent/: base_agent.py  coding_agent.py  conversation_recorder.py  plan_agent.py  project_init.py  state.py  sub_agent.py
src/completer/: __init__.py  command_completer.py  file_completer.py  multi_completer.py  symbol_completer.py
src/context/: context_manager.py  file_summary.py
src/context/parsers/: generic_parser.py  language_map.py  python_parser.py
src/llm/: anthropic_client.py  base_client.py  client.py  model_router.py  openai_client.py  prompts.py  zhipu_client.py
src/logger/: log_formats.py  structured_logger.py
src/memory/: __init__.py  ast_analyzer.py  health_check.py  memory_manager.py  models.py  storage.py  tree_storage.py
src/skills/: __init__.py  skill_loader.py  skill_registry.py
src/tasks/: __init__.py  task_manager.py  task_model.py
src/tools/: agent_tools.py  ask_user_tool.py  base_tool.py  compile_tool.py  context_tools.py  file.py  git.py  lsp.py  memory_tools.py  shell.py
src/ui/: collapsible_output.py  key_listener.py
src/utils/: diff.py  path.py
tests/: test_plans.py
(+9 files in other folders)
