[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyVibe"
version = "0.1.0"
description = "AI Coding Agent - Claude Code style CLI agent built with Python"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "prompt_toolkit>=3.0.47",
    "pathspec>=0.12.1",
    "requests",
    "python-lsp-server"
]

[project.scripts]
myvibe = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
